// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Label /> renders correctly with an unsupported color label 1`] = `
.c0 {
  border-radius: 1rem;
  padding: 0.2rem 0.75rem;
  background-color: #546e7a;
  margin-right: 0.25rem;
  color: #eceff1;
}

.c0:last-child {
  margin-right: 0;
}

<div
  class="c0"
>
  <span
    class="MuiTypography-root-1 MuiTypography-caption-11 MuiTypography-colorInherit-30"
  >
    Label
  </span>
</div>
`;

exports[`<Label /> renders correctly with blue color label 1`] = `
.c0 {
  border-radius: 1rem;
  padding: 0.2rem 0.75rem;
  background-color: #1e88e5;
  margin-right: 0.25rem;
  color: #e3f2fd;
}

.c0:last-child {
  margin-right: 0;
}

<div
  class="c0"
>
  <span
    class="MuiTypography-root-1 MuiTypography-caption-11 MuiTypography-colorInherit-30"
  >
    Label
  </span>
</div>
`;

exports[`<Label /> renders correctly with blueGrey color label 1`] = `
.c0 {
  border-radius: 1rem;
  padding: 0.2rem 0.75rem;
  background-color: #546e7a;
  margin-right: 0.25rem;
  color: #eceff1;
}

.c0:last-child {
  margin-right: 0;
}

<div
  class="c0"
>
  <span
    class="MuiTypography-root-1 MuiTypography-caption-11 MuiTypography-colorInherit-30"
  >
    Label
  </span>
</div>
`;

exports[`<Label /> renders correctly with colored label 1`] = `
.c0 {
  border-radius: 1rem;
  padding: 0.2rem 0.75rem;
  background-color: #e53935;
  margin-right: 0.25rem;
  color: #ffebee;
}

.c0:last-child {
  margin-right: 0;
}

<div
  class="c0"
>
  <span
    class="MuiTypography-root-1 MuiTypography-caption-11 MuiTypography-colorInherit-30"
  >
    Label
  </span>
</div>
`;

exports[`<Label /> renders correctly with default label 1`] = `
.c0 {
  border-radius: 1rem;
  padding: 0.2rem 0.75rem;
  background-color: #546e7a;
  margin-right: 0.25rem;
  color: #eceff1;
}

.c0:last-child {
  margin-right: 0;
}

<div
  class="c0"
>
  <span
    class="MuiTypography-root-1 MuiTypography-caption-11 MuiTypography-colorInherit-30"
  >
    Label
  </span>
</div>
`;

exports[`<Label /> renders correctly with orange color label 1`] = `
.c0 {
  border-radius: 1rem;
  padding: 0.2rem 0.75rem;
  background-color: #fb8c00;
  margin-right: 0.25rem;
  color: #37474f;
}

.c0:last-child {
  margin-right: 0;
}

<div
  class="c0"
>
  <span
    class="MuiTypography-root-1 MuiTypography-caption-11 MuiTypography-colorInherit-30"
  >
    Label
  </span>
</div>
`;

exports[`<Label /> renders correctly with red color label 1`] = `
.c0 {
  border-radius: 1rem;
  padding: 0.2rem 0.75rem;
  background-color: #e53935;
  margin-right: 0.25rem;
  color: #ffebee;
}

.c0:last-child {
  margin-right: 0;
}

<div
  class="c0"
>
  <span
    class="MuiTypography-root-1 MuiTypography-caption-11 MuiTypography-colorInherit-30"
  >
    Label
  </span>
</div>
`;

exports[`<Label /> renders correctly with teal color label 1`] = `
.c0 {
  border-radius: 1rem;
  padding: 0.2rem 0.75rem;
  background-color: #00897b;
  margin-right: 0.25rem;
  color: #e0f2f1;
}

.c0:last-child {
  margin-right: 0;
}

<div
  class="c0"
>
  <span
    class="MuiTypography-root-1 MuiTypography-caption-11 MuiTypography-colorInherit-30"
  >
    Label
  </span>
</div>
`;

exports[`<Label /> renders correctly with yellow color label 1`] = `
.c0 {
  border-radius: 1rem;
  padding: 0.2rem 0.75rem;
  background-color: #fdd835;
  margin-right: 0.25rem;
  color: #37474f;
}

.c0:last-child {
  margin-right: 0;
}

<div
  class="c0"
>
  <span
    class="MuiTypography-root-1 MuiTypography-caption-11 MuiTypography-colorInherit-30"
  >
    Label
  </span>
</div>
`;
